--- a/Assets/Scripts/Core/Core.asmdef
+++ b/Assets/Scripts/Core/Core.asmdef
@@ -1,4 +1,6 @@
 {
-	"name": "Core",
-	"references":[ "GUID:8c4dd21966739024fbd72155091d199e" ]
+    "name": "Core",
+    "references": [
+        "GUID:8c4dd21966739024fbd72155091d199e"
+    ]
 }
